@@ -3,6 +3,7 @@ Version 2.5 ->
 ------------------
  - added freebsd7 settings to setup.py (Sujan Shakya)
  - added support for unix-specific --home distutils install parameter
+ - added support for extracting JAVAHOME from windows registry (Bill Janssen)
  - 
 
 Version 2.4 -> 2.5
